Give credit to imagery in README Update the img for all Adjust margins and spacing Fix bug for buttons not displaying Add caption imgs Add footer with additional sign up option

--- a/style.css
+++ b/style.css
@@ -3,19 +3,21 @@
 	background-color: rgb(12, 12, 65);
 	color: white;
 	padding: 16px;
+	margin: 0px;
 }
 
+
 .header {
-	border: 5px solid red;
 	display: flex;
-	justify-content: space-between;
-	align-items: center
+	justify-content: space-around;
+	align-items: center;
+	margin-bottom: 16px;
+	/* border: 5px solid red;*/
 }
 
 .header ul {
 	display: flex;
 	justify-content: space-between;
-	margin: 8px;
 	gap: 8px;
 }
 
@@ -34,31 +36,32 @@
 /* content with the sign up button and image */
 
 .upper {
-	border: 5px solid blue;
 	display: flex;
 	justify-content: center;
-	align-items: flex-start;
-	margin: 32px;
-	
+	align-items: center;
+	/*border: 5px solid blue;*/
 }
 
 .intro {
 	font-weight: bold;
 	text-align: center;
 	font-size: 56px;
+	
 }
 
 .upper_content {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	max-width: 300px;
+	max-width: 400px;
 	gap: 4px;
 }
 
 .upper img {
-	width: 250px;
-	max-height: 150px;
+	width: 500px;
+	max-height: 350px;
+	/*
+	margin-right: 48px;*/
 }
 
 /* content and links for the recipes that will be card shaped */
@@ -66,6 +69,7 @@
 	display: flex;
 	justify-content: space-around;
 	margin: 32px;
+	/* border: 5px solid green;*/
 }
  
 .box_content ul {
@@ -79,11 +83,19 @@
 .box_content ul li {
 	list-style-type: none;
 	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	border: 5px solid #eee;
+	box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+	border-radius: 5px;
 }
+
 
 /* Quote content from users of this site */
 .quote_container {
 	background-color: rgb(180, 180, 180);
+	padding: 16px;
 }
 
 .quote {
@@ -95,6 +107,7 @@
 	flex-direction: column;
 	width: max-content;
 	margin: auto;
+	padding-top: 8px;
 	gap: 4px;
 }
 
@@ -104,11 +117,56 @@
 	margin-bottom: 8px;
 }
 
+/* Footer section */
+.footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 48px;
+	/*border: 5px solid blue;*/
+}
+
+.footer_box {
+	display: flex;
+	justify-content: center;
+	background-color:  rgb(47, 104, 190);
+	width: 1200px;
+	max-height: 500px;
+	border-radius: 5px;
+	padding: 16px;
+	gap: 84px;
+}
+
+.footer_content {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	max-width: 400px;
+	gap: 4px;
+	color: white;
+	/*border: 5px solid blue;*/
+}
+
+
+
+
 /*general formating for commonly used tags */
 
-li {
+ul li {
 	font-size: 24px;
 	font-family: Verdana, "Times New Roman", sans-serif;
+	list-style-type: none;
+}
+
+ul li img{
+	width: 200px;
+	height: 200px;
+}
+
+ li {
+	font-size: 24px;
+	font-family: Verdana, "Times New Roman", sans-serif;
+	
 }
 
 li.recipe:hover{
@@ -125,4 +183,13 @@ button {
 	background-color: rgb(47, 104, 190);
 	color: white;
 	border-radius: 5px;
+	border: 1px solid white;
+}
+
+button a {
+	color: white;
+}
+
+a {
+	text-decoration: none;
 }
